small fix in the navigation. section revealing functionality added using Intersection Observer API

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               class="navbar__image"
             />
           </a>
-          <ul class="navbar__items navigation">
+          <ul class="navbar__items">
             <li class="navbar__item">
               <a href="#testimonials" class="navbar__link"> About</a>
             </li>
@@ -34,13 +34,14 @@
             </li>
           </ul>
           <div class="navbar__toggle">
-            <input
-              type="checkbox"
-              id="toggle"
-              class="navbar__toggle--checkbox"
-            />
-            <label for="toggle" class="navbar__toggle--label"
-              ><span class="navbar__toggle--span">&nbsp;</span></label
+            <span class="navbar__toggle--span navbar__toggle--span-top"
+              >&nbsp;</span
+            >
+            <span class="navbar__toggle--span navbar__toggle--span-middle"
+              >&nbsp;</span
+            >
+            <span class="navbar__toggle--span navbar__toggle--span-bottom"
+              >&nbsp;</span
             >
           </div>
         </nav>
